# slr-pipeline-template

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/brainstorming/: README.md
data/: raw
data/processed/: pro  processed files here  to_review.csv  topic_plot.html
data/raw/: 20241028_scopus.csv  20241028_wos_1to500.txt  20241028_wos_501to729.txt  searchCriteria.txt  stub
docs/plans/: 2026-02-18-pipeline-fixes-and-gaps.md  2026-02-19-interactive-k-selection-design.md  2026-02-19-interactive-k-selection-plan.md  2026-02-19-preprocessing-topic-modeling-design.md  2026-02-19-preprocessing-topic-modeling-plan.md  2026-02-20-recency-citation-filter-design.md  2026-02-20-recency-citation-filter-plan.md  2026-02-22-enriched-synthesis-report-design.md  2026-02-22-enriched-synthesis-report-plan.md  2026-02-22-export-topic-terms-design.md  2026-02-23-custom-stopwords-nouns-only-plan.md
legacy/: methodology.md
legacy/notebooks/: 01. Topic Modelling_20241028 copy.ipynb
src/pipeline/: __init__.py  __main__.py  config.py  ingest.py  metrics.py  preprocess.py  quality_review.py  runner.py  synthesis.py  topic_identify.py  topic_model.py  topic_select.py
src/slr_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py  test_ingest.py  test_metrics.py  test_preprocess.py  test_quality_review.py  test_runner.py  test_synthesis.py  test_synthesis_report_tex.py  test_synthesis_topic_audit.py  test_topic_identify.py  test_topic_model.py  test_topic_select.py
tests/fixtures/: scopus_sample.csv  wos_sample.txt
(+4 files in other folders)
