[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slr-pipeline"
version = "0.1.0"
description = "Automated Systematic Literature Review pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "gensim>=4.3.0",
    "pyLDAvis>=3.4.0",
    "litstudy>=1.0.6",
    "tqdm>=4.60.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
